Refactored some parts of the plugin and introduced a new class.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -12,5 +12,7 @@ permissions:
     default: true
   mailboxes.list:
     default: true
+  mailboxes.send:
+    default: true
   mailboxes.config:
     default: op
