Finished adding the archive command.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -18,5 +18,7 @@ permissions:
     default: true
   mailbox.delete:
     default: true
+  mailbox.archive:
+    default: true
   mailboxes.config:
     default: op
