--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dansplugins</groupId>
     <artifactId>Mailboxes</artifactId>
-    <version>v0.10</version>
+    <version>v1.0-alpha-1</version>
     <packaging>jar</packaging>
 
     <name>Mailbox</name>
