--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>dansplugins</groupId>
     <artifactId>Mailboxes</artifactId>
-    <version>v1.1</version>
+    <version>v1.2-alpha-1</version>
     <packaging>jar</packaging>
 
     <name>Mailbox</name>
@@ -69,6 +69,13 @@
             <artifactId>spigot-api</artifactId>
             <version>1.13-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>dansplugins</groupId>
+            <artifactId>DansAPI</artifactId>
+            <version>v0.2</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/DansAPI-v0.2-alpha-1.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
