--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
         <dependency>
             <groupId>dansplugins</groupId>
             <artifactId>DansAPI</artifactId>
-            <version>v0.2</version>
+            <version>v0.2-alpha-1</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/src/main/resources/DansAPI-v0.2-alpha-1.jar</systemPath>
         </dependency>
