--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: Mailboxes
 version: 1.2-alpha-1
 main: dansplugins.mailboxes.Mailboxes
 api-version: 1.13
+softdepend: [DansAPI]
 
 commands:
   mailboxes:
